<resources>
    <string name="app_name">AndelaChallenge1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="welcomeAppTxt">ALC 4 Phase 1</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="about">About</string>
    <string name="profile_andela">Logo Andela</string>
    <string name="john_doe">John Doe</string>
    <string name="josu_tchirktema">josué TCHIRKTEMA</string>
    <string name="track_android">Track: Android</string>
    <string name="country_ivory_coast">Country: Ivory Coast</string>
    <string name="email">Email: tchirktemajosue@gmail.com</string>
    <string name="phone_number">Phone Number: 22573886818</string>
    <string name="slack_username">Slack Username: @tchirktema</string>
</resources>
