<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfilActivity" android:background="#0F7D7E7E">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/josue" android:id="@+id/profilImage"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            android:contentDescription="@string/profile_andela"/>
    <TextView
            android:text="@string/josu_tchirktema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameTxt"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:fontFamily="@font/aladin"
            android:textSize="30sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/profilImage" app:layout_constraintVertical_bias="0.114"/>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nameTxt"
            tools:layout_editor_absoluteX="16dp"
            app:layout_constraintVertical_bias="0.04" android:id="@+id/view"/>

    <TextView
            android:text="@string/track_android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trackTxt"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nameTxt"
            android:layout_marginTop="84dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="18sp" app:fontFamily="@font/aladin"/>

    <TextView
            android:text="@string/country_ivory_coast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countryTxt"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/trackTxt"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="18sp" app:fontFamily="@font/aladin"/>


    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailTxt"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/countryTxt"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="18sp" app:fontFamily="@font/aladin"/>


    <TextView
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneTxt"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailTxt"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="18sp" app:fontFamily="@font/aladin"/>


    <TextView
            android:text="@string/slack_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slackTxt"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneTxt"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="18sp" app:fontFamily="@font/aladin"/>

</android.support.constraint.ConstraintLayout>