<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/welcome_to_alc_4_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/welcomeTxt"
            app:layout_constraintVertical_bias="0.118"
            app:fontFamily="@font/aladin"
            android:textSize="42sp"
            android:textColor="@color/colorABlack"
            app:layout_constraintHorizontal_bias="0.496"/>

    <Button
            android:text="@string/about_alc"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/aboutBtn"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.197"
            app:fontFamily="@font/aladin"
            android:textSize="30sp"/>
    <Button
            android:text="@string/my_profile"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/profilBtn"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.111"
            app:fontFamily="@font/aladin"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/aboutBtn"/>



</android.support.constraint.ConstraintLayout>